--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     
     <section id="contact">
         <h2>Contact Us</h2>
-        <form id="contactForm">
+        <form id="contactForm" action="https://formsubmit.co/naqvi_sn@yahoo.com" method="POST">
             <input type="text" name="name" placeholder="Your Name" required>
             <input type="email" name="email" placeholder="Your Email" required>
             <textarea name="message" placeholder="Your Message" required></textarea>
