--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <th>Description</th>
                     <th>Stock</th>
                     <th>Rented (Y/N)</th>
-                    <th>Action</th>
+                    <th>Notes</th>
                 </tr>
             </thead>
             <tbody>
@@ -43,35 +43,5 @@
             <button type="submit">Send</button>
         </form>
     </section>
-
-    <script>
-        async function loadInventory() {
-            const response = await fetch('inventory.json'); // Load inventory data
-            const data = await response.json();
-            const tableBody = document.querySelector('#paddleTable tbody');
-            tableBody.innerHTML = '';
-
-            data.forEach(item => {
-                const row = document.createElement('tr');
-                row.innerHTML = `
-                    <td>${item.name}</td>
-                    <td>${item.type}</td>
-                    <td>$${item.price}</td>
-                    <td>$${item.rental_price}</td>
-                    <td>${item.description}</td>
-                    <td>${item.stock}</td>
-                    <td>${item.rented}</td>
-                    <td><button onclick="requestPaddle('${item.name}')">Request</button></td>
-                `;
-                tableBody.appendChild(row);
-            });
-        }
-
-        function requestPaddle(name) {
-            alert(`Request submitted for: ${name}`);
-        }
-
-        document.addEventListener('DOMContentLoaded', loadInventory);
-    </script>
 </body>
 </html>
