--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <title>Pickleball Paddle Store</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
+    <style>
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+        th, td {
+            padding: 10px;
+            text-align: center;
+            white-space: nowrap;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -24,7 +35,7 @@
                     <th>Rental Price</th>
                     <th>Description</th>
                     <th>Stock</th>
-                    <th>Rented (Y/N)</th>
+                    <th style="white-space: nowrap;">Rented (Y/N)</th>
                     <th>Notes</th>
                 </tr>
             </thead>
