--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <header>
         <h1>Pickleball Paddle Store</h1>
-        <p>Buy or Rent High-Quality Pickleball Paddles</p>
+        <p>Buy or Rent Used Pickleball Paddles</p>
     </header>
     
     <section id="inventory">
