--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <header>
         <h1>Pickleball Paddle Store</h1>
-        <p>Buy or Rent Used Pickleball Paddles</p>
+        <p>Buy or Rent High-Quality Pickleball Paddles</p>
     </header>
     
     <section id="inventory">
@@ -47,12 +47,13 @@
     
     <section id="contact">
         <h2>Contact Us</h2>
-        <form id="contactForm" action="https://formsubmit.co/naqvi_sn@yahoo.com" method="POST">
+        <form id="contactForm" action="https://formsubmit.co/dinodinker@gmail.com" method="POST">
             <input type="text" name="name" placeholder="Your Name" required>
             <input type="email" name="email" placeholder="Your Email" required>
             <textarea name="message" placeholder="Your Message" required></textarea>
             <button type="submit">Send</button>
         </form>
+        <p>For direct inquiries, email us at: <a href="mailto:dinodinker@gmail.com">dinodinker@gmail.com</a></p>
     </section>
 </body>
 </html>
