--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@
         </table>
     </section>
     
+    <section id="policy">
+        <h2>Paddle Rental and Purchase Policy</h2>
+        <p><strong>Rental Terms:</strong> Paddles are available for rent at <strong>$15 per week</strong>. If the rental period exceeds one week, an additional <strong>$3 per day</strong> will be charged.</p>
+        <p><strong>Rental Availability:</strong> Rentals are only available for customers located in <strong>Dallas, TX</strong>.</p>
+        <p><strong>Used Paddle Sales:</strong> Used paddles are available for purchase and can be shipped nationwide. Additional <strong>shipping fees</strong> will apply.</p>
+    </section>
+    
     <section id="contact">
         <h2>Contact Us</h2>
         <form id="contactForm" action="https://formsubmit.co/dinodinker@gmail.com" method="POST">
