--- a/index.html
+++ b/index.html
@@ -6,22 +6,11 @@
     <title>Pickleball Paddle Store</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
-    <style>
-        table {
-            width: 100%;
-            border-collapse: collapse;
-        }
-        th, td {
-            padding: 10px;
-            text-align: center;
-            white-space: nowrap;
-        }
-    </style>
 </head>
 <body>
     <header>
         <h1>Pickleball Paddle Store</h1>
-        <p>Buy or Rent High-Quality Pickleball Paddles</p>
+        <p>Buy or Rent Used Pickleball Paddles</p>
     </header>
     
     <section id="inventory">
@@ -35,7 +24,7 @@
                     <th>Rental Price</th>
                     <th>Description</th>
                     <th>Stock</th>
-                    <th style="white-space: nowrap;">Rented (Y/N)</th>
+                    <th>Rented (Y/N)</th>
                     <th>Notes</th>
                 </tr>
             </thead>
