--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>Pickleball Paddle Store</h1>
-        <p>Buy or Rent Used Pickleball Paddles</p>
+        <p>Buy or Rent High-Quality Pickleball Paddles</p>
     </header>
     
     <section id="inventory">
@@ -20,6 +20,7 @@
                 <tr>
                     <th>Name</th>
                     <th>Type</th>
+                    <th>Condition</th>
                     <th>Price</th>
                     <th>Rental Price</th>
                     <th>Description</th>
