--- a/index.html
+++ b/index.html
@@ -15,24 +15,27 @@
     
     <section id="inventory">
         <h2>Available Paddles</h2>
-        <table id="paddleTable">
-            <thead>
-                <tr>
-                    <th>Name</th>
-                    <th>Type</th>
-                    <th>Condition</th>
-                    <th>Price</th>
-                    <th>Rental Price</th>
-                    <th>Description</th>
-                    <th>Stock</th>
-                    <th>Rented (Y/N)</th>
-                    <th>Notes</th>
-                </tr>
-            </thead>
-            <tbody>
-                <!-- Inventory data will be dynamically loaded here -->
-            </tbody>
-        </table>
+        <div class="table-container">
+            <table id="paddleTable">
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Type</th>
+                        <th>Condition</th>
+                        <th>Price</th>
+                        <th>Rental Price</th>
+                        <th>Description</th>
+                        <th>Stock</th>
+                        <th>Rented (Y/N)</th>
+                        <th>Notes</th>
+                        <th>Image</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <!-- Inventory data will be dynamically loaded here -->
+                </tbody>
+            </table>
+        </div>
     </section>
     
     <section id="policy">
