--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>Pickleball Paddle Store</h1>
-        <p>Buy or Rent High-Quality Pickleball Paddles</p>
+        <p><strong>Buy or Rent High-Quality Pickleball Paddles</strong></p>
     </header>
     
     <section id="inventory">
