--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
                 <tr>
                     <th>Name</th>
                     <th>Type</th>
+                    <th>Condition</th>
                     <th>Price</th>
                     <th>Rental Price</th>
                     <th>Description</th>
                     <th>Stock</th>
                     <th>Rented (Y/N)</th>
-                    <th>Action</th>
+                    <th>Notes</th>
                 </tr>
             </thead>
             <tbody>
@@ -34,25 +35,22 @@
         </table>
     </section>
     
+    <section id="policy">
+        <h2>Paddle Rental and Purchase Policy</h2>
+        <p><strong>Rental Terms:</strong> Paddles are available for rent at <strong>$15 per week</strong>. If the rental period exceeds one week, an additional <strong>$3 per day</strong> will be charged.</p>
+        <p><strong>Rental Availability:</strong> Rentals are only available for customers located in <strong>Dallas, TX</strong>.</p>
+        <p><strong>Used Paddle Sales:</strong> Used paddles are available for purchase and can be shipped nationwide. Additional <strong>shipping fees</strong> will apply.</p>
+    </section>
+    
     <section id="contact">
         <h2>Contact Us</h2>
-        <form id="contactForm">
+        <form id="contactForm" action="https://formsubmit.co/dinodinker@gmail.com" method="POST">
             <input type="text" name="name" placeholder="Your Name" required>
             <input type="email" name="email" placeholder="Your Email" required>
             <textarea name="message" placeholder="Your Message" required></textarea>
             <button type="submit">Send</button>
         </form>
+        <p>For direct inquiries, email us at: <a href="mailto:dinodinker@gmail.com">dinodinker@gmail.com</a></p>
     </section>
-
-    <!-- New Discount Section -->
-    <section id="discounts">
-        <h2>Exclusive Paddle Discounts</h2>
-        <p>Use my Ambassador discount code <strong>"dinodinker"</strong> for paddle discounts:</p>
-        <ul>
-            <li><strong>11six24:</strong> 10% off</li>
-            <li><strong>Spartus:</strong> 10% off</li>
-        </ul>
-    </section>
-
 </body>
 </html>
