--- a/index.html
+++ b/index.html
@@ -52,5 +52,16 @@
         </form>
         <p>For direct inquiries, email us at: <a href="mailto:dinodinker@gmail.com">dinodinker@gmail.com</a></p>
     </section>
+
+    <!-- Discount Code Section -->
+    <section id="discounts">
+        <h2>Exclusive Paddle Discounts</h2>
+        <p>Use my Ambassador discount code <strong>"dinodinker"</strong> for paddle discounts:</p>
+        <ul>
+            <li><strong>11six24:</strong> 10% off</li>
+            <li><strong>Spartus:</strong> 10% off</li>
+        </ul>
+    </section>
+
 </body>
 </html>
