--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </table>
     </section>
     
-    <section id="policy">
+    <section id="policy" class="left-align">
         <h2>Paddle Rental and Purchase Policy</h2>
         <p><strong>Rental Terms:</strong> Paddles are available for rent at <strong>$15 per week</strong>. If the rental period exceeds one week, an additional <strong>$3 per day</strong> will be charged.</p>
         <p><strong>Rental Availability:</strong> Rentals are only available for customers located in <strong>Dallas, TX</strong>.</p>
@@ -54,7 +54,7 @@
     </section>
 
     <!-- Discount Code Section -->
-    <section id="discounts">
+    <section id="discounts" class="left-align">
         <h2>Exclusive Paddle Discounts</h2>
         <p>Use my Ambassador discount code <strong>"dinodinker"</strong> for paddle discounts:</p>
         <ul>
