--- a/index.html
+++ b/index.html
@@ -41,6 +41,16 @@
         <p><strong>Rental Availability:</strong> Rentals are only available for customers located in <strong>Dallas, TX</strong>.</p>
         <p><strong>Used Paddle Sales:</strong> Used paddles are available for purchase and can be shipped nationwide. Additional <strong>shipping fees</strong> will apply.</p>
     </section>
+
+        <!-- Discount Code Section -->
+    <section id="discounts" class="left-align">
+        <h2>Exclusive Paddle Discounts</h2>
+        <p class="left-align">Use my Ambassador discount code <strong>"dinodinker"</strong> for paddle discounts:</p>
+        <ul>
+            <li><strong>11six24:</strong> 10% off</li>
+            <li><strong>Spartus:</strong> 10% off</li>
+        </ul>
+    </section>
     
     <section id="contact">
         <h2>Contact Us</h2>
@@ -53,15 +63,7 @@
         <p>For direct inquiries, email us at: <a href="mailto:dinodinker@gmail.com">dinodinker@gmail.com</a></p>
     </section>
 
-    <!-- Discount Code Section -->
-    <section id="discounts" class="left-align">
-        <h2>Exclusive Paddle Discounts</h2>
-        <p>Use my Ambassador discount code <strong>"dinodinker"</strong> for paddle discounts:</p>
-        <ul>
-            <li><strong>11six24:</strong> 10% off</li>
-            <li><strong>Spartus:</strong> 10% off</li>
-        </ul>
-    </section>
+
 
 </body>
 </html>
