--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <!-- Discount Code Section -->
     <section id="discounts" class="left-align">
         <h2>Exclusive Paddle Discounts</h2>
-        <p class="left-align">Use my Ambassador discount code <strong>"dinodinker"</strong> for paddle discounts:</p>
+        <p>Use my Ambassador discount code <strong>"dinodinker"</strong> for paddle discounts:</p>
         <ul>
             <li><strong>11six24:</strong> 10% off</li>
             <li><strong>Spartus:</strong> 10% off</li>
