--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>Pickleball Paddle Store</h1>
-        <p><strong>Buy or Rent High-Quality Pickleball Paddles</strong></p>
+        <strong>Buy or Rent High-Quality Pickleball Paddles</strong>
     </header>
     
     <section id="inventory">
@@ -47,7 +47,8 @@
         <!-- Discount Code Section -->
     <section id="discounts" class="left-align">
         <h2>Exclusive Paddle Discounts</h2>
-        <p>Use my Ambassador discount code <strong>"dinodinker"</strong> for paddle discounts:</p>
+        <br />
+        Use my Ambassador discount code <strong>"dinodinker"</strong> for paddle discounts:
         <ul>
             <li><strong>11six24:</strong> 10% off</li>
             <li><strong>Spartus:</strong> 10% off</li>
