--- a/index.html
+++ b/index.html
@@ -37,11 +37,10 @@
     
     <section id="policy" class="left-align">
         <h2>Paddle Rental and Purchase Policy</h2>
-        <strong>Rental Terms:</strong> Paddles are available for rent at <strong>$15 per week</strong>. If the rental period exceeds one week, an additional <strong>$3 per day</strong> will be charged.
-        <br />
-        <strong>Rental Availability:</strong> Rentals are only available for customers located in <strong>Dallas, TX</strong>.
-        <br />
-        <strong>Used Paddle Sales:</strong> Used paddles are available for purchase and can be shipped nationwide. Additional <strong>shipping fees</strong> will apply.
+        <ul>
+            <li><strong>Rental Terms:</strong> Paddles are available for rent at <strong>$15 per week</strong>. If the rental period exceeds one week, an additional <strong>$3 per day</strong> will be charged.</li>
+            <li><strong>Rental Availability:</strong> Rentals are only available for customers located in <strong>Dallas, TX</strong>.</li>
+            <li><strong>Used Paddle Sales:</strong> Used paddles are available for purchase and can be shipped nationwide. Additional <strong>shipping fees</strong> will apply.</li>
     </section>
 
     <p></p>
