--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </ul>
     </section>
     
-    <section id="contact">
+    <section id="contact" class="left-align">
         <h2>Contact Us</h2>
         <form id="contactForm" action="https://formsubmit.co/dinodinker@gmail.com" method="POST">
             <input type="text" name="name" placeholder="Your Name" required>
