--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
         <h2>Exclusive Paddle Discounts</h2>
         Use my Ambassador discount code <strong>"dinodinker"</strong> for paddle discounts:
         <ul>
+            <li><strong>Vactic Pro:</strong> 10% off</li>
             <li><strong>11six24:</strong> 10% off</li>
             <li><strong>Spartus:</strong> 10% off</li>
+            <li><strong>ACE:</strong> 10% off</li>
         </ul>
     </section>
 
