--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
         <!-- Discount Code Section -->
     <section id="discounts" class="left-align">
         <h2>Exclusive Paddle Discounts</h2>
-        Use my Ambassador discount code <strong>"dinodinker"</strong> for paddle discounts:
+        Use my Ambassador discount code <strong>"dinodinker"</strong> for 10% paddle discounts:
         <ul>
-            <li><strong>Vactic Pro:</strong> 10% off</li>
-            <li><strong>11six24:</strong> 10% off</li>
-            <li><strong>Spartus:</strong> 10% off</li>
-            <li><strong>ACE:</strong> 10% off</li>
+            <li><strong>Vactic Pro:</strong></li>
+            <li><strong>11six24:</strong></li>
+            <li><strong>Spartus:</strong></li>
+            <li><strong>ACE:</strong></li>
         </ul>
     </section>
 
