--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
         <h2>Exclusive Paddle Discounts</h2>
         Use my Ambassador discount code <strong>"dinodinker"</strong> for 10% paddle discounts:
         <ul>
-            <li><strong>Vactic Pro:</strong></li>
-            <li><strong>11six24:</strong></li>
-            <li><strong>Spartus:</strong></li>
-            <li><strong>ACE:</strong></li>
+            <li><strong>Vactic Pro</strong></li>
+            <li><strong>11six24</strong></li>
+            <li><strong>Spartus</strong></li>
+            <li><strong>ACE</strong></li>
         </ul>
     </section>
 
