--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
         </form>
         <p>For direct inquiries, email us at: <a href="mailto:dinodinker@gmail.com">dinodinker@gmail.com</a></p>
     </section>
+    <p></p>
+    Youtube   - https://www.youtube.com/@dinodinker
+    <br>
+    Instagram - https://www.instagram.com/dinodinker
+    
 
 
 
