--- a/index.html
+++ b/index.html
@@ -72,9 +72,12 @@
         <p>For direct inquiries, email us at: <a href="mailto:dinodinker@gmail.com">dinodinker@gmail.com</a></p>
     </section>
     <p></p>
-    Youtube   - https://www.youtube.com/@dinodinker
-    <br>
-    Instagram - https://www.instagram.com/dinodinker
+    <p>
+        <a href="https://www.youtube.com/@dinodinker" target="_blank">📺 YouTube - @dinodinker</a>
+    </p>
+    <p>
+        <a href="https://www.instagram.com/dinodinker" target="_blank">📸 Instagram - @dinodinker</a>
+    </p>
     
 
 
