--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         <!-- Discount Code Section -->
     <section id="discounts" class="left-align">
-        <h2>Exclusive Paddle Discounts</h2>
+        <h2>Exclusive Paddle and Grip Discounts</h2>
         Use my Ambassador discount code <strong>"dinodinker"</strong> for 10% paddle discounts:
         <ul>
             <li><strong>Honolulu</strong></li>
@@ -57,6 +57,10 @@
             <li><strong>11six24</strong></li>
             <li><strong>Spartus</strong></li>
             <li><strong>ACE</strong></li>
+        </ul>
+        Use my Ambassador discount code <strong>"dinodinker15"</strong> for 10% grip discounts:
+        <ul>
+            <li><strong>Bodhi Grip and Tape</strong></li>
         </ul>
     </section>
 
