--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             <li><strong>11six24</strong></li>
             <li><strong>Spartus</strong></li>
             <li><strong>ACE</strong></li>
+            <li><strong>KOMODO</strong></li>
         </ul>
         Use my Ambassador discount code <strong>"dinodinker15"</strong> for 10% grip discounts:
         <ul>
