--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header>
         <h1>Pickleball Paddle Store</h1>
         <strong>Buy or Rent High-Quality Pickleball Paddles</strong>
+        <img src="assets/dd-logo.png" alt="Dino Dinker Logo" style="height: 80px;">
     </header>
     
     <section id="inventory">
