--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <header>
-        <h1>Pickleball Paddle Store</h1>
-        <strong>Buy or Rent High-Quality Pickleball Paddles</strong>
-        <img src="assets/dd-logo.png" alt="Dino Dinker Logo" style="height: 80px; display: block; margin: 0 auto;">
+    <header class="site-header">
+        <div class="header-container">
+            <img src="assets/dd-logo.png" alt="Dino Dinker Logo" class="logo">
+            <div class="header-text">
+                <h1>Pickleball Paddle Store</h1>
+                <strong>Buy or Rent High-Quality Pickleball Paddles</strong>
+            </div>
+        </div>
     </header>
     
     <section id="inventory">
