--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="site-header">
-      <img src="assets/dd-logo.png" alt="Dino Dinker Logo" class="logo">
+      <img src="assets/dd-logo2.png" alt="Dino Dinker Logo" class="logo">
       <div class="header-text">
         <h1>Pickleball Paddle Store</h1>
         <strong>Buy or Rent High-Quality Pickleball Paddles</strong>
